# testtask

./: .gitignore  CMakeLists.txt  CheckSumStrategy.h  FileProcessingStrategy.h  StrategyFactory.h  Test.tst  WordCountStrategy.h  main.cpp
unittest/: CMakeLists.txt  unittest.cpp
